[package]
name = "wifipassdump"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.52"

features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]